[workspace]
members = [
  "sedimentology-replayer",
  "sedimentology-archiver",
  "sedimentology-distributor",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
replay-engine = { git = "https://github.com/orca-so/whirlpool-tx-replayer", tag = "v0.1.6", package = "replay-engine" }
whirlpool-replayer = { git = "https://github.com/orca-so/whirlpool-tx-replayer", tag = "v0.1.6", package = "whirlpool-replayer" }

mysql = { version = "24.0.0", default-features = false, features = ["default-rustls"] }
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.75"
bigdecimal = "0.4.5"
