[package]
name = "sedimentology-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replay-engine = { workspace = true }
whirlpool-replayer = { workspace = true }
mysql = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
bigdecimal = { workspace = true }

# re-export on replayer is best
anchor-lang = "0.29.0"
whirlpool_base = { workspace = true }

ctrlc = "3.4.1"

serde = "*"
serde_derive = "*"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
flate2 = "1.0.27"
csv = "1.3.0"
base64 = "0.21.4"
chrono = "0.4.31"