[package]
name = "sedimentology-distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replay-engine = { git = "https://github.com/orca-so/whirlpool-tx-replayer", package = "replay-engine" }

mysql = { workspace = true }
clap = { workspace = true }

ctrlc = "3.4.1"

serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "1.0.107"
flate2 = "1.0.27"
csv = "1.3.0"
base64 = "0.21.4"
chrono = "0.4.31"

axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3"
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7.10"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"