[package]
name = "sedimentology-distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replay-engine = { git = "https://github.com/orca-so/whirlpool-tx-replayer", tag = "v0.1.5", package = "replay-engine" }

mysql = { workspace = true }
clap = { workspace = true }

ctrlc = "3.4.1"

serde = "*"
serde_derive = "*"
serde_json = "1.0.107"
zstd = "0.13.1"
chrono = "0.4.31"
