[package]
name = "sedimentology-replayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replay-engine = { workspace = true }
mysql = { workspace = true }
clap = { workspace = true }

ctrlc = "3.4.1"

serde = "*"
serde_derive = "*"
serde_json = "1.0.107"
flate2 = "1.0.27"
csv = "1.3.0"
base64 = "0.21.4"
chrono = "0.4.31"